--- a/nouri/snippets/icon-header-bag.liquid
+++ b/nouri/snippets/icon-header-bag.liquid
@@ -1,34 +1,24 @@
-<!-- <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-header-bag" viewBox="0 0 27.2 27"><path d="M19.6 9c-.2-5.1-2.7-9-6-9s-5.8 3.9-6 9h-4v18h20V9h-4zm-6-7c2.1 0 3.8 3.2 4 7h-8c.2-3.8 1.9-7 4-7zm-8 23V11h11v14h-11zm16 0h-3V11h3v14z"/></svg> -->
-
-
-<svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-header-bag" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg width="29" height="28" class="icon icon-header-bag" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
-        <polygon id="path-1" points="0.0474866467 0.116626087 6.25726834 0.116626087 6.25726834 7 0.0474866467 7"></polygon>
-        <polygon id="path-3" points="0.0232147787 0.116626087 6.23299647 0.116626087 6.23299647 7 0.0232147787 7"></polygon>
+        <path id="a" d="M.03.07h3.76v4.17H.04z" />
+        <path id="c" d="M.01.07h3.77v4.17H.02z" />
     </defs>
-    <g id="Nouri-Site" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <g id="Home-Page" transform="translate(-1344.000000, -18.000000)">
-            <g id="Login-Shop-Cart" transform="translate(1086.000000, 17.000000)">
-                <g id="cart" transform="translate(258.000000, 1.000000)">
-                    <path d="M0,0 L0,1.75779894 L6.61794136,1.75779894 L10.0529999,21 L27.6057733,21 L33,6.87212785 L9.20818968,6.87212785 L7.98134237,0 L0,0 Z M9.5220211,8.62992679 L30.5500076,8.62992679 L26.4978231,19.2422011 L11.4164009,19.2422011 L9.5220211,8.62992679 Z" id="Fill-1" fill="#ED4623"></path>
-                    <g id="Group-8" transform="translate(10.000000, 23.000000)">
-                        <g id="Group-4">
-                            <mask id="mask-2" fill="white">
-                                <use xlink:href="#path-1"></use>
-                            </mask>
-                            <g id="Clip-3"></g>
-                            <path d="M0.0474866467,3.55834348 C0.0474866467,1.65753913 1.4374904,0.116626087 3.15244614,0.116626087 C4.86712731,0.116626087 6.25726834,1.65753913 6.25726834,3.55834348 C6.25726834,5.45914783 4.86712731,7.00006087 3.15244614,7.00006087 C1.4374904,7.00006087 0.0474866467,5.45914783 0.0474866467,3.55834348" id="Fill-2" fill="#ED4623" mask="url(#mask-2)"></path>
-                        </g>
-                        <g id="Group-7" transform="translate(11.394599, 0.000000)">
-                            <mask id="mask-4" fill="white">
-                                <use xlink:href="#path-3"></use>
-                            </mask>
-                            <g id="Clip-6"></g>
-                            <path d="M0.0232147787,3.55834348 C0.0232147787,1.65753913 1.41335581,0.116626087 3.12817427,0.116626087 C4.84299272,0.116626087 6.23299647,1.65753913 6.23299647,3.55834348 C6.23299647,5.45914783 4.84299272,7.00006087 3.12817427,7.00006087 C1.41335581,7.00006087 0.0232147787,5.45914783 0.0232147787,3.55834348" id="Fill-5" fill="#ED4623" mask="url(#mask-4)"></path>
-                        </g>
-                    </g>
-                </g>
-            </g>
+    <g fill="none" fill-rule="evenodd">
+        <path d="M0 0v1.07h4.01L6.1 12.73h10.64L20 4.16H5.58L4.84 0H0zm5.77 5.23h12.75l-2.46 6.43H6.92L5.77 5.23z"
+            fill="#ED4623" fill-rule="nonzero" />
+        <g transform="translate(6.06 13.94)">
+            <mask id="b" fill="#fff">
+                <use xlink:href="#a" />
+            </mask>
+            <path d="M.03 2.16C.03 1 .87.07 1.91.07s1.88.94 1.88 2.09-.83 2.08-1.87 2.08C.87 4.24.03 3.31.03 2.16"
+                fill="#ED4623" fill-rule="nonzero" mask="url(#b)" />
+        </g>
+        <g transform="translate(12.97 13.94)">
+            <mask id="d" fill="#fff">
+                <use xlink:href="#c" />
+            </mask>
+            <path d="M.01 2.16C.01 1 .86.07 1.9.07c1.04 0 1.89.94 1.89 2.09S2.93 4.24 1.9 4.24C.85 4.24.02 3.31.02 2.16"
+                fill="#ED4623" fill-rule="nonzero" mask="url(#d)" />
         </g>
     </g>
 </svg>
