--- a/nouri/snippets/password-protect.liquid
+++ b/nouri/snippets/password-protect.liquid
@@ -20,7 +20,7 @@ https://apps.shopify.com/password-protected-pages
 {% assign show_customer_login = false %}
 {% assign authorized_passwords = cart.attributes['authorized_passwords'] | split: ',' %}
 
-{% if product.id %}
+{% if template.name == "product" %}
   {% assign encoded_locks = collection_locks_str | split: "&" %}
   {% assign valid_lock_ids = product.collections | map: "id" | join: ',' | split: ',' %} 
     {% unless access_granted %}
@@ -95,7 +95,7 @@ https://apps.shopify.com/password-protected-pages
     {% endfor %}
   {% endunless %}
 
-{% elsif collection.id %}
+{% elsif template.name == "collection" %}
   {% assign encoded_locks = collection_locks_str | split: "&" %}
   {% assign valid_lock_ids = collection.id | downcase | split: "cast_to_array" %}
     {% unless access_granted %}
@@ -133,7 +133,7 @@ https://apps.shopify.com/password-protected-pages
     {% endfor %}
   {% endunless %}
 
-{% elsif page.id %}
+{% elsif template.name == "page" %}
   {% assign encoded_locks = page_locks_str | split: "&" %}
   {% assign valid_lock_ids = page.id | downcase | split: "cast_to_array" %}
     {% unless access_granted %}
@@ -171,7 +171,7 @@ https://apps.shopify.com/password-protected-pages
     {% endfor %}
   {% endunless %}
 
-{% elsif article.id %}
+{% elsif template.name == "article" %}
   {% assign encoded_locks = article_locks_str | split: "&" %}
   {% assign valid_lock_ids = article.id | downcase | split: "cast_to_array" %}
     {% unless access_granted %}
@@ -312,7 +312,7 @@ https://apps.shopify.com/password-protected-pages
         <script>document.getElementById('loginMessageContainer').style.display="none";</script>
         <center>
           <h3>Action Needed</h3>
-          <p>You are using customer tags to protect this page in MagicPass. You must <a href="https://help.shopify.com/en/manual/sell-online/checkout-settings/customer-accounts">enable customer accounts</a> for this to work. </p>
+          <p>You are using customer tags to protect this page in MagicPass. You must <a href="https://help.shopify.com/en/manual/sell-online/checkout-settings/customer-accounts" rel="nofollow">enable customer accounts</a> for this to work. </p>
         </center>
       {% endif %}
     {% else %}
