--- a/nouri/templates/product.liquid
+++ b/nouri/templates/product.liquid
@@ -7,7 +7,7 @@
 
 
 
-<div class="page-width">
+<div class="page-width mt-4">
     <hr>
     <div id="stamped-main-widget" class="custom-reviews-widget" data-widget-style="standard"></div>
 </div>
