--- a/nouri/snippets/product-card-alt.liquid
+++ b/nouri/snippets/product-card-alt.liquid
@@ -1,20 +1,35 @@
-<div class="card critical-clear" id="Card-{{ product.id }}" data-animate>
-  <a href="{{ product.url | within: collection }}" class="page-width card__wrapper{% if section.settings.show_spacing %} card__wrapper--padding{% endif %} {% if section.settings.text_left %} text-left {% else %}text-center{% endif %}">
+{%- assign left_margin = product.metafields.global.custom_left_image_move -%}
 
+<div class="card alt critical-clear" id="Card-{{ product.id }}" data-animate>
+  
+  <div class="card__wrapper{% if section.settings.show_spacing %} card__wrapper--padding{% endif %} {% if section.settings.text_left %} text-left {% else %}text-center{% endif %}{% if section.settings.show_dot %}show-dot{% endif %} ">
+    
     <div class="card__image-container">
-      {% if section.settings.show_custom_product_image %}
-        <img src="{{ product.metafields.global.custom_product_image_url }}" 
-        class="card__image-wrapper card__image--align lazyload fade-in
-          {% if section.settings.move_image_left %} move_image_left{% endif %}"
-        alt="{{ product.title }}">
-      {% else %}
-        {% if product.featured_image %}
-          {% include 'card-image', type: product.featured_image, grid_style: grid_style %}
-        {% endif %}
+
+      {% if section.settings.link_product_image %}
+        <a href="{{ product.url | within: collection }}">
       {% endif %}
+
+          {% if section.settings.show_custom_product_image %}
+            <img src="{{ product.metafields.global.custom_product_image_url }}" 
+                class="card__image-wrapper card__image--align lazyload fade-in {% if section.settings.move_image_left %} move_image_left{% endif %}"
+                alt="{{ product.title }}">
+          {% else %}
+            
+            {% if product.featured_image %}
+              {% include 'card-image', type: product.featured_image, grid_style: grid_style %}
+            {% endif %}
+            
+          {% endif %}
+
+      {% if section.settings.link_product_image %}
+        </a>
+      {% endif %}
+
     </div>
 
     <div class="card__info{% if grid_style == 'grid' %} card__info--aligned{% endif %} {% if section.settings.hide_product_price %}price-hide{% endif %}">
+      
       {% if section.settings.show_vendor %}
         <div class="card__brand">{{ product.vendor }}</div>
       {% endif %}
@@ -22,10 +37,20 @@
 
       {% if section.settings.show_product_info %}
 
-        <h3 class="card__name h4">{{ product.title }}</h3>
+        <h6 class="card__name weight-600">{{ product.title }}</h6>
 
           {% if section.settings.show_product_subtitle %}
-            <h6 class="product__subtitle"><strong>{{ product.metafields.global.subtitle }}</strong></h6>
+            <h6 class="product__subtitle">
+              <strong>
+                {{ product.metafields.global.subtitle }}
+              </strong>
+            </h6>
+          {% endif %}
+
+          {% if section.settings.show_product_subtext %}
+          <p class="product__subtitle">
+              {{ product.metafields.global.custom_product_subtext }}
+          </p>
           {% endif %}
           {%- comment -%}
           {% for variant in product.variants %}
@@ -42,7 +67,7 @@
         </p>
       {% endif %}
 
-      {% if product.available and section.settings.show_product_price %}
+      {% if product.available %}
         <div class="card__price">
           {% if product.compare_at_price > product.price %}
             {% comment %}
@@ -81,11 +106,23 @@
         </div>
       {% endif %}
 
-    {% if section.settings.show_product_button %}
-    <button class="btn wide{% if section.settings.use_second_product_button %} btn--secondary{% endif %}" data-animate>
-      {{ section.settings.product_button_label }}
-    </button>
-    {% endif %}
+      {% comment %}
+        {% form 'product', product, data-productid: product.id, class:'product-form' %}
+          {% if section.settings.show_product_button %}
+            <button class="btn btn--full wide{% if section.settings.use_second_product_button %} btn--secondary{% endif %}" data-animate>
+              add to cart
+            </button>
+          {% endif %}
+        {% endform %}
+      {% endcomment %}
+      
+      {% if section.settings.show_product_button %}
+        <form method="post" action="/cart/add">
+          <input type="hidden" name="id" value="{{ product.variants.first.id }}" />
+          <input min="1" type="hidden" type="number" id="quantity" name="quantity" value="1" />
+          <input type="submit" value="Add to cart" class="btn" />
+        </form>
+      {% endif %}
 
     </div>
     {% if product.compare_at_price > product.price %}
@@ -95,5 +132,5 @@
       </span>
     {% endif %}
 
-  </a>
+  </div>
 </div>
