--- a/nouri/snippets/subscription-product.liquid
+++ b/nouri/snippets/subscription-product.liquid
@@ -69,7 +69,7 @@
 			{% assign show_poweredby = true %}
 		{% endif %}
     	{% comment %}Custom styling{% endcomment %}
-    	{% assign widget_label_color = widget_settings.font_color | default: "#000000" %}
+    	{% assign widget_label_color = widget_settings.font_color | default: "#454545" %}
     	{% assign widget_active_color = widget_settings.active_color | default: "#676767" %}
     	{% assign widget_active_bg = widget_settings.background_color | default: "#F8F8F8" %}
     	{% assign widget_icon = widget_settings.widget_icon | default: "black" %}
@@ -106,69 +106,10 @@
 	<!-- Subscriptions Powered by ReCharge Payments: CSS -->
 	<link href="//rechargeassets-bootstrapheroes-rechargeapps.netdna-ssl.com/static/css/rcWidget.css" rel="stylesheet" type="text/css">
 	<style>
-		/* Widget: Purchase options */
-		label.rc_label {
-			color: {{ widget_label_color }};
-		}
-		div.rc_block__type--active {
-			background-color: {{ widget_active_bg }};
-		}
-		div.rc_block__type--active label.rc_label {
-			color: {{ widget_active_color }};
-		}
-		/* Widget: Popup */
-		div.rc_popup__block {
-			z-index: {{ popup_zindex }};
-		}
-		div.rc_popup__block:before {
-			border-bottom-color: #dfd3cc;
-		}
-		div.rc_popup__block {
-			background-color: #dfd3cc;
-		}
-		div.rc_popup__close,
-		div.rc_popup__block__content,
-		div.rc_popup__block__content strong {
-			color: #3b3b3b;
-		}
-		div.rc_popup__block__content a {
-			color: {{ popup_link_color }} !important;
-		}
+		
 		/* ReCharge CSS */
 		{{ recharge_custom_css }}
 		/* Add Custom CSS Below */
-		input.rc_radio {
-			margin: -9px 10px 0 0;
-		}
-		div.rc_block__type {
-			padding: 0 8px;
-		}
-		.rc_price.rc_price__autodeliver {
-			display: none;
-		}
-		.rc_block__type__autodeliver div.rc_popup__block {
-			background-color: #f0f0f0;
-		}
-
-		/* small media query */
-		@media only screen and (max-width: 749px) {
-			.rc_block.rc_block__type.rc_block__type__autodeliver,
-			.rc_block.rc_block__type.rc_block__type__onetime.rc_block__type--active {
-				display: flex;
-				align-items: center;
-			}
-
-			.rc_block__type__autodeliver .rc_popup {
-				padding: 4px 0 0 10px;
-			}
-
-			input.rc_radio {
-				width: auto;
-				margin: -13px 10px 0 0;
-			}
-
-		}
-
 
 	</style>
 	<!-- Subscriptions Powered by ReCharge Payments: HTML -->
@@ -192,45 +133,54 @@
 			</div>
 		{% endunless %}
 		<div class="rc_block rc_block__type rc_block__type__autodeliver {% if select_subscription_first %}rc_block__type--active{% endif %}" {% if subscription_only and shipping_interval_frequency.size == 1 %}style="display: none;"{% endif %}>
-			<input type="radio" name="purchase_type" id="rc_purchase_type_autodeliver" value="autodeliver" {% if select_subscription_first %}checked{% endif %} class="rc_radio rc_radio__autodeliver" {% if subscription_only %}style="display: none;"{% endif %}>
-			{% unless subscription_only %}
+			<!-- added div -->
+			<div class="subscribe-radio">
+			<!-- added div -->
+				<input type="radio" name="purchase_type" id="rc_purchase_type_autodeliver" value="autodeliver"
+					{% if select_subscription_first %}checked{% endif %} class="rc_radio rc_radio__autodeliver"
+					{% if subscription_only %}style="display: none;" {% endif %}>
+				{% unless subscription_only %}
 				<label for="rc_purchase_type_autodeliver" class="rc_label rc_label__autodeliver">
-					{{ label_autodeliver }}
+					{{ label_autodeliver }} {{ discount_percentage | floor }}%
 					{% if discount_percentage > 0 %}
-						<!-- <span class="rc_label__discount">({{ discount_percentage }}%):</span> -->
-						<span id="rc_price_autodeliver" class="rc_price rc_price__autodeliver"></span>
+					<!-- <span class="rc_label__discount">({{ discount_percentage }}%):</span> -->
+					<span id="rc_price_autodeliver" class="rc_price rc_price__autodeliver"></span>
 					{% endif %}
 				</label>
-			{% endunless %}
-            <div class="rc_popup">
-                {% if show_widget %}
-                    <div class="rc_popup__hover">
-                        {% if show_widget_icon %}
-                            <img src="{{ widget_icon }}" height="21" width="18" class="rc_popup__icon">
-                        {% endif %}
-                        <!-- {{ subscription_details_label }} -->
-                        <b>more info</b>
-                        <div class="rc_popup__block">
-                            <div class="rc_popup__block__content">
-                                <div class="rc_popup__close" style="display: none;">x</div>
-                                {{ how_it_works_text }}
-                                {% if show_learnmore %}
-                                    <br><a href="{{ learnmore_url }}" target="_blank">{{ learnmore_link }}</a>
-                                {% endif %}
-                            </div>
-                            {% if show_poweredby %}
-                                <div class="rc_popup__block__footer">
-                                    <a href="{{ poweredby_url }}" target="_blank">
-                                        <img src="//rechargestatic-bootstrapheroes.netdna-ssl.com/static/images/widget/rc_widget__banner@2x.png" height="28" width="153" class="rc_popup__badge">
-                                    </a>
-                                </div>
-                            {% endif %}
-                        </div>
-                    </div>
-                {% elsif show_widget == "link" %}
-                    <a href="{{ learnmore_url }}" target="_blank" class="rc_popup__hover">{% if show_widget_icon %}<img src="{{ widget_icon }}" height="21" width="18" class="rc_popup__icon"> {% endif %}{{ subscription_details_label }}</a>
-                {% endif %}
-            </div>
+				{% endunless %}
+				<div class="rc_popup">
+					{% if show_widget %}
+					<div class="rc_popup__hover">
+						{% if show_widget_icon %}
+						<img src="{{ widget_icon }}" height="21" width="18" class="rc_popup__icon">
+						{% endif %}
+						<!-- {{ subscription_details_label }} -->
+						<b>more info</b>
+						<div class="rc_popup__block">
+							<div class="rc_popup__block__content">
+								<div class="rc_popup__close" style="display: none;">x</div>
+								{{ how_it_works_text }}
+								{% if show_learnmore %}
+								<br><a href="{{ learnmore_url }}" target="_blank">{{ learnmore_link }}</a>
+								{% endif %}
+							</div>
+							{% if show_poweredby %}
+							<div class="rc_popup__block__footer">
+								<a href="{{ poweredby_url }}" target="_blank">
+									<img src="//rechargestatic-bootstrapheroes.netdna-ssl.com/static/images/widget/rc_widget__banner@2x.png"
+										height="28" width="153" class="rc_popup__badge">
+								</a>
+							</div>
+							{% endif %}
+						</div>
+					</div>
+					{% elsif show_widget == "link" %}
+					<a href="{{ learnmore_url }}" target="_blank" class="rc_popup__hover">{% if show_widget_icon %}<img
+							src="{{ widget_icon }}" height="21" width="18" class="rc_popup__icon">
+						{% endif %}{{ subscription_details_label }}</a>
+					{% endif %}
+				</div>
+			</div>
 			<div id="rc_autodeliver_options" class="rc_block rc_block__type__options">
 				<label for="rc_shipping_interval_frequency" class="rc_label rc_label__deliver_every">
 					<span class="rc_label__delivery">{{ label_deliver_every }}</span>
